# cookiecutter-active-data-recipes

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_name}}-recipes/: README.md  doclint  pyproject.toml  tox.ini
{{cookiecutter.project_name}}-recipes/docs/: conf.py  recipes.rst
{{cookiecutter.project_name}}-recipes/test/: conftest.py  test_queries.py  test_recipes_integration.py
{{cookiecutter.project_name}}-recipes/test/recipe_tests/: build_times.test
{{cookiecutter.project_name}}-recipes/{{cookiecutter.project_package}}_recipes/: build_times.py  context.yml
{{cookiecutter.project_name}}-recipes/{{cookiecutter.project_package}}_recipes/queries/: task_durations.query
