[tool.poetry]
name = "{{cookiecutter.project_name}}-recipes"
version = "0.1.0"
description = "Collection of recipes for finding information in ActiveData."

packages = [
    { include = "{{cookiecutter.project_package}}_recipes" },
]
include = [
    "extra/*",
    "*recipes/queries/*",
]

license = "MPL-2.0"
authors = [
    "{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>",
]

readme = "README.md"
repository = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_name}}-recipes"
homepage = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_name}}-recipes"

[tool.poetry.dependencies]
python = "^3.6"
adr = "^0.15.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.7"
flake8-import-order = "^0.18.1"
pytest = "^3.0.0"
tox = "^3.7.0"
